--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-cron": "^4.0.2",
     "twitter-api-v2": "^1.23.0"
   },
   "devDependencies": {
