--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,10 @@
 version: '3.8'
 
 services:
-  daily-rem-bot:
+  daily-rem:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: daily-rem-bot
     env_file:
       - .env
-    volumes:
-      - ./cronfile:/etc/cron.d/bot-cron
-      - ./logs:/var/log
     restart: always
